--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ duties so they can prepare for them.
 <h4 class = "titlefont">VP EDUCATION</h4>
 Send out the meeting agenda with role assignments for the upcoming Saturday session by Tuesday.
 Inform Toasmaster to followup on unassigned roles.
-<h4>TOASTMASTER</h4>
+<h4  class = "titlefont">TOASTMASTER</h4>
 The Toastmaster is a meeting’s director and host. You won’t usually be assigned this role until you
 are thoroughly familiar with the club and its procedures.
 As the Toastmaster, you’ll introduce each speaker. If a speaker will not write his or her own
@@ -270,7 +270,7 @@ Collect brief intros from all speakers & evaluators
 Get breakfast for at least 15-20 people (Suggested items: Pastries, Cookies, Fruits, Juice, Yogurt,
 Cake. Home cooked items are everyone's favorites :-))
 Adhere to the timing in the agenda
-<h4>TABLE TOPICS MASTER</h4>
+<h4 class = "titlefont">TABLE TOPICS MASTER</h4>
 With TABLE TOPICS™, the Topicsmaster gives members who aren’t assigned a speaking role the
 opportunity to speak during the meeting. The Topicsmaster challenges each member with a subject, and
 the speaker responds with a one- to two-minute impromptu talk. When the Toastmaster introduces you,
@@ -286,7 +286,7 @@ Call members who don't have any roles assigned (Call someone who don't have gree
 name tag)
 Remind the aduience to use "Word of the day"
 Summarize (if time permits) at the end and ask for timer report for voting
-<h4>SPEAKER</h4>
+<h4 class = "titlefont">SPEAKER</h4>
 Speaking program is the center of every Toastmasters meeting. After all, what’s Toastmasters without
 the talking? But members don’t just stand up and start yakking. They use the guidelines in the
 Competent Communication (CC) manual and the Advanced Communication Series (ACS) manuals to fully
@@ -301,11 +301,11 @@ manual
 Talk to your mentor (If no one is assigned, talk to VP Education immidiately and get a mentor)
 Practice, Practice & Practice. Practice solo, Practice in front of family, Practice with mentor
 Gather feedback from evaluator & audience
-<h4>GENERAL EVALUATOR</h4>
+<h4 class = "titlefont">GENERAL EVALUATOR</h4>
 Ensure the speech and leadership project evaluators know their responsibilities, supervise the
 timer, grammarian and Ah-Counter, Evaluate everything that takes place during the club meeting and
 make sure each activity is performed correctly.
-<h4>EVALUATOR</h4>
+<h4 class = "titlefont">EVALUATOR</h4>
 :Several days before the meeting, review the Effective Evaluation manual. Talk with the speaker or
 leader you’ve been assigned to evaluate and find out which manual project they will present. Review
 the project goals and what the speaker or leader hopes to achieve. Begin and end your evaluation
@@ -315,7 +315,7 @@ a valuable asset such as a smile or a sense of humor. Likewise, don’t permit t
 to remain ignorant of a serious fault: if it is personal, write it but don’t mention it aloud. Give
 the speaker or leader deserved praise and tactful suggestions in the manner you would like to
 receive them.
-<h4>AH-COUNTER</h4>
+<h4 class = "titlefont">AH-COUNTER</h4>
 The purpose of the Ah-Counter is to note any word or sound used as a crutch by anyone who speaks
 during the meeting. Words may be inappropriate interjections, such as and, well, but, so and you
 know. Sounds may be ah, um or er. You should also note when a speaker repeats a word or phrase such
@@ -326,7 +326,7 @@ are responsible for monitoring time for each meeting segment and each speaker. Y
 the timing signal, indicating to each speaker how long he or she has been talking. Serving as timer
 is an excellent opportunity to practice giving instructions and time management – something we do
 every day.
-<h4> WORD MASTER </h4>
+<h4 class = "titlefont"> WORD MASTER </h4>
 Select a "word of the day" for the meeting.It should be a word that will help members increase their
 vocabulary – a word that can be incorporated easily into everyday conversation but is different from
 the way people usually express themselves. Adjectives and adverbs are more adaptable than nouns or
@@ -337,21 +337,21 @@ definition in letters large enough to be seen from the back of the room
 Prepare a sentence showing how the word is used
 When introduced: Announce the word of the day, state its part of speech, define it, use it in a
 sentence and ask that anyone speaking during any part of the meeting use it
-<h4>GRAMMARIAN</h4>
+<h4 class = "titlefont">GRAMMARIAN</h4>
 Throughout the meeting, listen to everyone’s word usage. Write down any awkward use or misuse of the
 language (incomplete sentences, sentences that change direction in midstream, incorrect grammar or
 malapropisms) with a note of who erred. For example, point out if someone used a singular verb with
 a plural subject. “One in five children wear glasses” should be “one in five children wears
 glasses.” Note when a pronoun is misused. “No one in the choir sings better than her” should be “No
 one in the choir sings better than she.”
-<h4>THOUGHT OF THE DAY</h4>
+<h4 class = "titlefont">THOUGHT OF THE DAY</h4>
 The thought, an inspiring quotation that sets the tone for the day’s meeting, is a welcome option in
 many clubs. It is usually delivered by a designated club member at the beginning or the end of the
 meeting, and is sometimes used as a replacement for or in combination with an invocation or pledge
 of allegiance.
 Pick a quote or thought. Please limit it to less than a minute
 When introduced: tell your quote/thought of the day
-<h4>JOKE MASTER</h4>
+<h4 class = "titlefont">JOKE MASTER</h4>
 This a great way to end the session on light note. The idea is to have members end the session on
 light note and prepare for rest of the day with joyous mood!
 Present clean, concise, appropriate jokes. Please limit it to less than a minute. Can be joke,
