--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@ setwidth" >
     <section  id="typicalmeeting">
       <div class="container">
 
-        <h2 class="text-center">Typical Meeting</h2>
+        <h2 class="titlefont">Typical Meeting</h2>
 
 
           <!-- Accent-colored raised button -->
 <pre color = "white" class = "goodfont" >
-<h3>Saratoga Toastmasters | Roles 101</h3>
+<h3 class = "titlefont">Saratoga Toastmasters | Roles 101</h3>
 The success of a Toastmasters meeting depends on the program participants. There are many roles to
 fill, and each job is designed to improve the members’<br>
 public speaking,listening and leadership skills. Program participants must know and understand their
