--- a/index.html
+++ b/index.html
@@ -140,21 +140,28 @@ Secretary, and Sergeant of Arms.</p>
 ​
 ​<p> Current Officers Team 2017-2018 and Emails <br />
 President: Paul Maruthanayagam <br />
-
+Paul, has been to toastmasters for 5 years and has being wanting a presidential position ever since.
+Paul tries his best to be the leader he is right now, and makes it his goal to be at the meeting everytime and make Toastmasters and a ]
+good experience for everybody.
 Email: pmarutha@gmail.com <br />
-
 Vice President of Education: Nelson Mu <br />
-
+Nelson, is the VPE makes sure that schedules go well, and that everyone has a position the next toastmasters.
 ​Email:  thenelsonmu@gmail.com <br />
 Vice President of Membership: Ray Lin <br />
+Ray, invites new members, and gets them in the club. He has been in Toastmasters for four years and he's been VPE last year
 ​ Email: raylin01@gmail.com <br />
 Vice President of Public Relations: Zachary <br />
+Zachary, makes the youtube videos for Toastmasters and gets the publicity of it to the world, so that more people can join.
+  He has been doing for toastmasters last year, and continues to perserve and make Toastmasters efficent and organized.
 Email: zacharytgeorge@gmail.com <br />
 Secretary: Taylor <br />
+Taylor joined in 2015, and has actively been a member in Toastmasters.
 ​ Email: tayathena@gmail.com <br />
 Treasurer: Vincent <br />
+Vincent is a senior as of right now, and takes care of the money in Toastmasters
 Email: vincenthwang@gmail.com <br />
 Sergeant at Arms: Ben Noel <br />
+Ben helps clean Toastmasters meetings by putting away the chairs and tables.
 ​Email: benjaminnoel@gmail.com <br />
 </p>
 </div>
@@ -169,7 +176,7 @@ Sergeant at Arms: Ben Noel <br />
           </pref>
 <center>
   <a href
-="http://download943.mediafire.com/glx22lcndn7g/78x0dikb2mhkbx4/all-roles-explained-in-detail.pdf"
+="https://drive.google.com/file/d/1Dgj-Rv836q1XfPE29-H21G6fcccw1hEt/view?usp=sharing"
 target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent
 setwidth">
     Details of Roles
@@ -179,7 +186,7 @@ setwidth">
 
   </pre>
   <a href
-="http://download1650.mediafire.com/svs80zwy0fug/wlfu1a1ghxikn9l/coach-gavelier-portrait.pdf"
+="https://drive.google.com/file/d/11ksq-Cpzfb6P3GmGQUCmLcpPTmy1bEaV/view?usp=sharing"
 target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent
 setwidth" >
     Coach
@@ -188,7 +195,7 @@ setwidth" >
   <pre>
 
   </pre>
-  <a href ="http://download1499.mediafire.com/d3z1jw3kcr5g/uouok7uhcebu3cu/grammarian-form.pdf"
+  <a href ="https://drive.google.com/file/d/17hFCRkx6f1dd_usV60AuON8TnU8LhoTg/view?usp=sharing"
 target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent
 setwidth" >
     Gramarian
@@ -197,7 +204,7 @@ setwidth" >
   <pre>
 
   </pre>
-  <a href ="http://download941.mediafire.com/9twof1r9p9xg/4xnlwksj8b1tu5o/head-coach-gavelier.pdf"
+  <a href ="https://drive.google.com/file/d/1pfkWyLd7yEazL2ZtFnZydG45qMx3vP0V/view?usp=sharing"
 target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent
 setwidth" >
     Head Coach
@@ -207,7 +214,7 @@ setwidth" >
 
   </pre>
   <a href
-="http://download1079.mediafire.com/sp82s0p830ig/4ff5o17pypw6n7a/timers-log-voice-masters.pdf"
+="https://drive.google.com/file/d/14JpHAh3PVCm6spFlatwsd6DrtBGvJbTC/view?usp=sharing"
 target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent
 setwidth" >
     Timer Log
@@ -217,7 +224,7 @@ setwidth" >
 
   </pre>
   <a href
-="http://download949.mediafire.com/8x02md7bsx6g/sbykjbbku3l64gy/wizard-of-ahs-advanced.pdf"
+="https://drive.google.com/file/d/1xZSXfSLXMJgqCgQ9gGWOXkZ7mRs_lqdW/view?usp=sharing"
 target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent
 setwidth" >
     Wizard Of Ahs
