--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@ In the beginning of the year, at Saratoga Gavel Club, we elect leaders to help r
 smoothly. We have a President, Vice President of Education, Vice President of Public Relations,
 Secretary, and Sergeant of Arms.</p>
 ​
-​<p> Current Officers Team 2017-2018 and Emails
-President: Paul Maruthanayagam </p>
-<img class="img-fluid" src="img/personalpaul.png" alt="">
+​<p> Current Officers Team 2017-2018 and Emails <br />
+President: Paul Maruthanayagam <br />
+<img src="img/personalpaul.png" alt="paul">
 
-<br> Paul, has been to toastmasters for 5 years and has being wanting a presidential position ever since.
+Paul, has been to toastmasters for 5 years and has being wanting a presidential position ever since.
 Paul tries his best to be the leader he is right now, and makes it his goal to be at the meeting everytime and make Toastmasters and a ]
 good experience for everybody.
 Email: pmarutha@gmail.com <br />
