--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ Paul tries his best to be the leader he is right now, and makes it his goal to b
 good experience for everybody.
 Email: pmarutha@gmail.com <br />
 Vice President of Education: Nelson Mu <br />
-<img class="img-fluid" src="img/nelson.png" alt="">
-</img>
+<img src="img/nelson.png" alt="nelson">
+
 Nelson, is the VPE makes sure that schedules go well, and that everyone has a position the next toastmasters.
 ​Email:  thenelsonmu@gmail.com <br />
 Vice President of Membership: Ray Lin <br />
