--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@ smoothly. We have a President, Vice President of Education, Vice President of Pu
 Secretary, and Sergeant of Arms.</p>
 ​
 ​<p> Current Officers Team 2017-2018 and Emails <br />
-<h3> President: Paul Maruthanayagam <h3/>
-<p><img src="img/personalpaul.png" alt="alt text" style="float: left">Paul, has been to toastmasters for 5 years and has being wanting a presidential position ever since.
+President: Paul Maruthanayagam <br />
+<img src="img/personalpaul.png" alt="paul">
+
+Paul, has been to toastmasters for 5 years and has being wanting a presidential position ever since.
 Paul tries his best to be the leader he is right now, and makes it his goal to be at the meeting everytime and make Toastmasters and a ]
 good experience for everybody.
-Email: pmarutha@gmail.com </p>
-
-<br />
+Email: pmarutha@gmail.com <br />
 Vice President of Education: Nelson Mu <br />
 <img src="img/nelson.png" alt="nelson">
 
