--- a/index.html
+++ b/index.html
@@ -142,9 +142,7 @@ Secretary, and Sergeant of Arms.</p>
 President: Paul Maruthanayagam <br />
 <img src="img/personalpaul.PNG" alt="">
 
-Paul, has been to toastmasters for 5 years and has being wanting a presidential position ever since.
-Paul tries his best to be the leader he is right now, and makes it his goal to be at the meeting everytime and make Toastmasters and a ]
-good experience for everybody.
+Paul, has been to toastmasters for 5 years and makes sure everyone has an amazing experience
 Email: pmarutha@gmail.com <br />
 Vice President of Education: Nelson Mu <br />
 <img src="img/nelson.PNG" alt="nelson">
@@ -157,8 +155,7 @@ Ray, invites new members, and gets them in the club. He has been in Toastmasters
 Vice President of Public Relations: Zachary <br />
 <img class="img-fluid" src="img/zach.PNG" alt="">
 </img>
-Zachary, makes the youtube videos for Toastmasters and gets the publicity of it to the world, so that more people can join.
-  He has been doing for toastmasters last year, and continues to perserve and make Toastmasters efficent and organized.
+Zachary, is the VPPR and gets the word out of Toastmasters, by making websites and videos
 Email: zacharytgeorge@gmail.com <br />
 Secretary: Taylor <br />
 <img class="img-fluid" src="img/taylor.PNG" alt="">
