--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Secretary, and Sergeant of Arms.</p>
 President: Paul Maruthanayagam <br />
 <img src="img/personalpaul.PNG" alt="">
 
-Paul, has been to toastmasters for 5 years and makes sure everyone has an amazing experience
+Paul, has been to toastmasters for 5 years, and makes sure everyone has fun, while being an amazing leader
 Email: pmarutha@gmail.com <br />
 Vice President of Education: Nelson Mu <br />
 <img src="img/nelson.PNG" alt="nelson">
@@ -155,7 +155,7 @@ Ray, invites new members, and gets them in the club. He has been in Toastmasters
 Vice President of Public Relations: Zachary <br />
 <img class="img-fluid" src="img/zach.PNG" alt="">
 </img>
-Zachary, is the VPPR and gets the word out of Toastmasters, by making websites and videos
+Zachary, is the VPPR and gets the word out of Toastmasters, by making websites and videos, and word of mouth.
 Email: zacharytgeorge@gmail.com <br />
 Secretary: Taylor <br />
 <img class="img-fluid" src="img/taylor.PNG" alt="">
