--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Ray, invites new members, and gets them in the club. He has been in Toastmasters
 Vice President of Public Relations: Zachary <br />
 <img class="img-fluid" src="img/zach.PNG" alt="">
 </img>
-Zachary, is the VPPR and gets the word out of Toastmasters, by making websites and videos, and word of mouth.
+Zachary, is the VPPR and gets the word out of Toastmasters, by making this website and youtube videos.
 Email: zacharytgeorge@gmail.com <br />
 Secretary: Taylor <br />
 <img class="img-fluid" src="img/taylor.PNG" alt="">
