--- a/index.html
+++ b/index.html
@@ -139,30 +139,15 @@ smoothly. We have a President, Vice President of Education, Vice President of Pu
 Secretary, and Sergeant of Arms.</p>
 ​
 ​<p> Current Officers Team 2017-2018 and Emails <br />
-President: Paul Maruthanayagam <br />
-Paul, has been to toastmasters for 5 years and has being wanting a presidential position ever since.
-Paul tries his best to be the leader he is right now, and makes it his goal to be at the meeting everytime and make Toastmasters and a ]
-good experience for everybody.
-Email: pmarutha@gmail.com <br />
-Vice President of Education: Nelson Mu <br />
-Nelson, is the VPE makes sure that schedules go well, and that everyone has a position the next toastmasters.
-​Email:  thenelsonmu@gmail.com <br />
-Vice President of Membership: Ray Lin <br />
-Ray, invites new members, and gets them in the club. He has been in Toastmasters for four years and he's been VPE last year
-​ Email: raylin01@gmail.com <br />
-Vice President of Public Relations: Zachary <br />
-Zachary, makes the youtube videos for Toastmasters and gets the publicity of it to the world, so that more people can join.
-  He has been doing for toastmasters last year, and continues to perserve and make Toastmasters efficent and organized.
-Email: zacharytgeorge@gmail.com <br />
-Secretary: Taylor <br />
-Taylor joined in 2015, and has actively been a member in Toastmasters.
-​ Email: tayathena@gmail.com <br />
-Treasurer: Vincent <br />
-Vincent is a senior as of right now, and takes care of the money in Toastmasters
-Email: vincenthwang@gmail.com <br />
-Sergeant at Arms: Ben Noel <br />
-Ben helps clean Toastmasters meetings by putting away the chairs and tables.
-​Email: benjaminnoel@gmail.com <br />
+President: Paul M.<br />
+Vice President of Education: Nelson M.<br />
+Vice President of Membership: Ray L.<br />
+Vice President of Public Relations: Zachary G.<br />
+Secretary: Taylor A.<br />
+Treasurer: Vincent W.<br />
+Sergeant at Arms: Ben N.<br />
+​To Contact Us<br />
+saratogagavelmem@gmail.com <br />
 </p>
 </div>
     </section>
