--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Secretary: Taylor A.<br />
 Treasurer: Vincent W.<br />
 Sergeant at Arms: Ben N.<br />
 ​To Contact Us<br />
-<a href="mailto:saratogagavelmem@gmail.com">saratogagavelmem@gmail.com <br />
+saratogagavelmem@gmail.com <br />
 </p>
 </div>
     </section>
