--- a/index.html
+++ b/index.html
@@ -372,13 +372,11 @@ When introduced: tell your joke. Have fun!
         <div class="container">
 
         <h4> Example of a Saratoga Gavel Club Video </h4>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/1nbu0VqVSxE"
-frameborder="0" allowfullscreen></iframe>
         <pre>
         </pre>
-        <a href ="https://www.youtube.com/channel/UCY_RGB1DBXPXqCkbgtlLWAQ" target="_blank" button
+        <a href ="mailto:saratogagavelmem@gmail.com" target="_blank" button
 class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
-        View More Videos
+        You must send an email to request access for the Youtube videos
         </a>
 
         </div>
