--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ When introduced: tell your joke. Have fun!
         </pre>
         <a href ="mailto:saratogagavelmem@gmail.com" target="_blank" button
 class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
-        You must send an email to request access for the Youtube videos
+        You must send an email to saratogagavelmem@gmail.com
         </a>
 
         </div>
