--- a/index.html
+++ b/index.html
@@ -374,9 +374,10 @@ When introduced: tell your joke. Have fun!
         <h4> Example of a Saratoga Gavel Club Video </h4>
         <pre>
         </pre>
+        <p> Send an email to saratogagavelmem@gmail.com to get access to the youtube videos, and special links </p>
         <a href ="mailto:saratogagavelmem@gmail.com" target="_blank" button
 class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
-        You must send an email to saratogagavelmem@gmail.com
+        Click button to send email
         </a>
 
         </div>
