--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@ When introduced: tell your joke. Have fun!
         <h4> Example of a Saratoga Gavel Club Video </h4>
         <pre>
         </pre>
-        <p> Send an email to saratogagavelmem@gmail.com to get access to the youtube videos, and special links </p>
-        <a href ="mailto:saratogagavelmem@gmail.com" target="_blank" button
+        <p> Click To Access Restricted Toastmasters Youtube Video Site </p>
+        <a href ="http://saratogagavel.weebly.com/assignments.html" target="_blank" button
 class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
         Click button to send email
         </a>
