--- a/index.html
+++ b/index.html
@@ -374,10 +374,10 @@ When introduced: tell your joke. Have fun!
         <h4> Example of a Saratoga Gavel Club Video </h4>
         <pre>
         </pre>
-        <p> Click To Access Restricted Toastmasters Youtube Video Site </p>
+        <p> Access is only provided to members of Toastmasters</p>
         <a href ="http://saratogagavel.weebly.com/assignments.html" target="_blank" button
 class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
-        Click For Youtube Videos
+        Access Youtube Videos
         </a>
 
         </div>
