--- a/index.html
+++ b/index.html
@@ -371,13 +371,13 @@ When introduced: tell your joke. Have fun!
         </div>
         <div class="container">
 
-        <h4> Example of a Saratoga Gavel Club Video </h4>
+        <h4> Saratoga Gavel Club Video </h4>
         <pre>
         </pre>
-        <p> Access is only provided to members of Toastmasters</p>
-        <a href ="http://saratogagavel.weebly.com/assignments.html" target="_blank" button
+        <p> To Gain Access To Youtube Videos please email saratogagavelmem@gmail.com</p>
+        <a href ="mailto:saratogagavelmem@gmail.com" target="_blank" button
 class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
-        Access Youtube Videos
+        Email Us
         </a>
 
         </div>
